argocd-resources/httproute.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/refs/heads/main/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd
spec:
  parentRefs:
  - name: internet
    namespace: envoy-gateway-system
  hostnames:
  - "c.desertbluffs.com"
  rules:
  - backendRefs:
    - name: argocd-server
      port: 443
